--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+matplotlib==3.6.3
 numpy==1.22.1
-pandas==1.3.5
+pandas==1.5.0
 tifffile==2021.11.2
 tqdm==4.62.3
 python-bioformats==4.0.5
 xmltodict==0.12.0
+seaborn==0.12.2
+scanpy==1.9.1
+anndata==0.8.0
+squidpy==1.2.3
